// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas Component No props 1`] = `
<div
  className="diagram__container"
  id=""
>
  <canvas
    className="figureone__text"
  />
  <canvas
    className="figureone__gl"
  />
  <div
    className="figureone__html"
  />
</div>
`;

exports[`Canvas Component With id 1`] = `
<div
  className="diagram__container"
  id="test_id"
>
  <canvas
    className="figureone__text"
  />
  <canvas
    className="figureone__gl"
  />
  <div
    className="figureone__html"
  />
</div>
`;

exports[`Canvas Component function is called after render 1`] = `
<div
  className="diagram__container"
  id="test_id"
>
  <canvas
    className="figureone__text"
  />
  <canvas
    className="figureone__gl"
  />
  <div
    className="figureone__html"
  />
</div>
`;
